--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "eslint": "^7.11.0",
+    "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
