--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "tamagotchi",
   "version": "1.0.0",
-  "description": "",
+  "description": "Just a tamagotchi emulator.",
   "main": "index.js",
-  "directories": {
-    "doc": "doc"
-  },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "eslint": "^7.11.0",
     "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel serve --no-hmr index.html"
+    "dev": "parcel serve --no-hmr index.html",
+    "build": "parcel build index.html"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "tamagotchi"
+  ],
+  "author": "Carlos Gajardo <cjgajard@gmail.com>",
   "license": "ISC"
 }
